<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.EditProfile.Fragments.EditOfficeFragment">

    <TextView
        android:id="@+id/infoTxtViewOfficeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/Office_edit_txtView"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editTxtAddressOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoTxtViewOfficeEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/new_address_input"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtAddressCodeOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtAddressOfficeEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/new_address_code_input"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtPhoneOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtAddressCodeOfficeEdit"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/new_telephone_input"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtMobileOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtPhoneOfficeEdit"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/new_mobile_input"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtWorkHoursOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtMobileOfficeEdit"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/new_work_hours_input"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtOnlinePriceOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtWorkHoursOfficeEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/new_online_price_input"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtMeetingPriceOfficeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtOnlinePriceOfficeEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/new_meeting_price_input"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtBiographyOfficeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtMeetingPriceOfficeEdit"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/new_biography_input"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnUpdateOffice"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/update_btn" />
</RelativeLayout>