<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.EditProfile.Fragments.EditUserDataFragment">

    <TextView
        android:id="@+id/infoTxtViewUserDataEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/userData_edit_txtView"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editTxtNameUserDataEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoTxtViewUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/new_name_input"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtSurnameUserDataEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtNameUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_surname_input"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtAddressUserDataEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtSurnameUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_address_input"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtAddressCodeUserDataEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtAddressUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_address_code_input"
        android:importantForAutofill="no"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtCityUserDataEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtAddressCodeUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_city_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtTelephoneUserDataEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtCityUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_telephone_input"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnSetProfImageUserDataEdit"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTxtTelephoneUserDataEdit"
        android:layout_centerInParent="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/edit_profile_image" />

    <Button
        android:id="@+id/btnUpdateUserData"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/update_btn" />

</RelativeLayout>