<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".Views.LoginSignup.Fragments.SignUpStep1Fragment">

    <TextView
        android:id="@+id/infoTxtViewSignUp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/login_txtView"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editTxtEmailSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtPassSignUp1"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/email_input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtPassSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pass_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTxtPassConfirmSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtPassSignUp1"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pass_confirm_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <CheckBox
        android:id="@+id/isDoctorSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTxtPassConfirmSignUp1"
        android:layout_centerInParent="true"
        android:text="@string/isDoctor_check_box" />

    <Button
        android:id="@+id/btnNextSignUp1"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/next_btn" />
</RelativeLayout>