<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Primary.Fragments.CreateMeetingFragment">

    <TextView
        android:id="@+id/doctorNameTxtViewCreateMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/new_meeting_with_txtView"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/dateTimeEditTxtCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stateEditTxtCreateMeeting"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/date_time_input"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/stateEditTxtCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:text="@string/state_pending" />

    <EditText
        android:id="@+id/patientDescEditTxtCreateMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stateEditTxtCreateMeeting"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/patient_desc_input"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnCreateMeetingCreateMeeting"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/create_meeting" />

</RelativeLayout>